# Solvex

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  Multi-variableODE.cpp  PhysicsWorld.cpp  SimpleExample.cpp  SystemOfNLEquations.cpp
include/Solvex/: BoundaryConditions.h  Equation.h  Equations.h  Solvex.h  Variables.h
src/: BoundaryConditions.cpp  CMakeLists.txt  Equation.cpp  Equations.cpp  Solvex.cpp
tests/: CMakeLists.txt  TestSolvex.cpp
